Fixed scrollbar flash

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -75,7 +75,7 @@ html {
 
 body {
   background: #0e0e0e;
-  overflow-x: hidden; }
+  overflow: hidden; }
   body.is-preload *, body.is-preload *:before, body.is-preload *:after {
     -moz-animation: none !important;
     -webkit-animation: none !important;
@@ -914,7 +914,7 @@ button {
     -ms-filter: blur(0.2rem);
     filter: blur(0.2rem); }
   body.is-preload #bg:before {
-    background-color: #0e0e0e; }
+    background-color: #181818; }
 
 /* Wrapper */
 #wrapper {
@@ -1173,7 +1173,7 @@ button {
     position: relative;
     width: 40rem;
     max-width: 100%;
-    background-color: rgba(14, 14, 14, 0.85);
+    background-color: rgba(24, 24, 24, 0.85);
     border-radius: 4px;
     opacity: 0; }
     #main article.active {
